Better handling for SkiaImage cleanup